--- a/notebooks/202208_spiral_sklearn_rd_binary_classification.ipynb
+++ b/notebooks/202208_spiral_sklearn_rd_binary_classification.ipynb
@@ -701,6 +701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "reports = dict()\n",
     "# predictive model\n",
     "clf = SVC(kernel='rbf', gamma=0.2, C=10**3)"
    ]
@@ -752,21 +753,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    Negative     0.4444    1.0000    0.6154         8\n",
-      "    Positive     0.0000    0.0000    0.0000        10\n",
-      "\n",
-      "    accuracy                         0.4444        18\n",
-      "   macro avg     0.2222    0.5000    0.3077        18\n",
-      "weighted avg     0.1975    0.4444    0.2735        18\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -780,7 +766,11 @@
     }
    ],
    "source": [
-    "print(classification_report(ys_test, predictions, digits=4, target_names=['Negative','Positive']))"
+    "report = classification_report(ys_test, predictions, digits=4, target_names=['Negative','Positive'], output_dict=True)\n",
+    "report['loo']= {}\n",
+    "report['loo']['acc']=cv['train_score'].mean()\n",
+    "report['loo']['val_acc']=cv['test_score'].mean()\n",
+    "reports['svm-rbf'] = report"
    ]
   },
   {
@@ -847,25 +837,14 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    Negative     0.5000    0.5000    0.5000         8\n",
-      "    Positive     0.6000    0.6000    0.6000        10\n",
-      "\n",
-      "    accuracy                         0.5556        18\n",
-      "   macro avg     0.5500    0.5500    0.5500        18\n",
-      "weighted avg     0.5556    0.5556    0.5556        18\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(classification_report(ys_test, predictions, digits=4, target_names=['Negative','Positive']))"
+    "report = classification_report(ys_test, predictions, digits=4, target_names=['Negative','Positive'], output_dict=True)\n",
+    "report = classification_report(ys_test, predictions, digits=4, target_names=['Negative','Positive'], output_dict=True)\n",
+    "report['loo']= {}\n",
+    "report['loo']['acc']=cv['train_score'].mean()\n",
+    "report['loo']['val_acc']=cv['test_score'].mean()\n",
+    "reports['randomforest'] = report"
    ]
   },
   {
@@ -925,25 +904,13 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    Negative     0.4615    0.7500    0.5714         8\n",
-      "    Positive     0.6000    0.3000    0.4000        10\n",
-      "\n",
-      "    accuracy                         0.5000        18\n",
-      "   macro avg     0.5308    0.5250    0.4857        18\n",
-      "weighted avg     0.5385    0.5000    0.4762        18\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(classification_report(ys_test, predictions, digits=4, target_names=['Negative','Positive']))"
+    "report = classification_report(ys_test, predictions, digits=4, target_names=['Negative','Positive'], output_dict=True)\n",
+    "report['loo']= {}\n",
+    "report['loo']['acc']=cv['train_score'].mean()\n",
+    "report['loo']['val_acc']=cv['test_score'].mean()\n",
+    "reports['knn'] = report"
    ]
   },
   {
@@ -1004,25 +971,202 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "report = classification_report(ys_test, predictions, digits=4, target_names=['Negative','Positive'], output_dict=True)\n",
+    "report['loo']= {}\n",
+    "report['loo']['acc']=cv['train_score'].mean()\n",
+    "report['loo']['val_acc']=cv['test_score'].mean()\n",
+    "reports['lda'] = report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "    Negative     0.4286    0.7500    0.5455         8\n",
-      "    Positive     0.5000    0.2000    0.2857        10\n",
-      "\n",
-      "    accuracy                         0.4444        18\n",
-      "   macro avg     0.4643    0.4750    0.4156        18\n",
-      "weighted avg     0.4683    0.4444    0.4012        18\n",
-      "\n"
+      "svm-rbf\n",
+      "randomforest\n",
+      "knn\n",
+      "lda\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(ys_test, predictions, digits=4, target_names=['Negative','Positive']))"
+    "for key in reports:\n",
+    "    print('{}'.format(key))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5471698113207547\n",
+      "0.6226415094339622\n",
+      "0.6226415094339622\n",
+      "0.5471698113207547\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in reports:\n",
+    "    print('{}'.format(reports[key]['loo']['val_acc']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4444444444444444\n",
+      "0.5555555555555556\n",
+      "0.5\n",
+      "0.4444444444444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in reports:\n",
+    "    print('{}'.format(reports[key]['accuracy']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.6\n",
+      "0.3\n",
+      "0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in reports:\n",
+    "    print('{}'.format(reports[key]['Positive']['recall']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "0.5\n",
+      "0.75\n",
+      "0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in reports:\n",
+    "    print('{}'.format(reports[key]['Negative']['recall']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.6\n",
+      "0.6\n",
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in reports:\n",
+    "    print('{}'.format(reports[key]['Positive']['precision']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4444444444444444\n",
+      "0.5\n",
+      "0.46153846153846156\n",
+      "0.42857142857142855\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in reports:\n",
+    "    print('{}'.format(reports[key]['Negative']['precision']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.6\n",
+      "0.4\n",
+      "0.28571428571428575\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in reports:\n",
+    "    print('{}'.format(reports[key]['Positive']['f1-score']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6153846153846153\n",
+      "0.5\n",
+      "0.5714285714285714\n",
+      "0.5454545454545454\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in reports:\n",
+    "    print('{}'.format(reports[key]['Negative']['f1-score']))"
    ]
   }
  ],
